# jenkins-flutter-bot

./: .coverage  .dockerignore  .gitignore  README.md  conftest.py  package-lock.json  package.json  pyproject.toml
apps/agent-control/: README.md  pyproject.toml
apps/agent-control/src/agent_control/: __init__.py  config.py  control.py  dependencies.py  main.py  manager.py  schema.py  vpn.py
apps/agent-control/src/agent_control/routers/: __init__.py  control.py
apps/agent-control/tests/: conftest.py  test_control.py  test_vpn.py
apps/build-manager/: Dockerfile  README.md  pyproject.toml
apps/build-manager/src/build_manager/: __init__.py  config.py  control.py  dependencies.py  main.py  manager.py  schema.py  settings.py
apps/build-manager/src/build_manager/builds/: __init__.py  coordinator.py  git_remote.py  jenkins_client.py  routes.py  state.py
apps/build-manager/src/build_manager/routers/: __init__.py  builds.py  control.py
apps/build-manager/tests/: conftest.py  test_build_tracker.py  test_builds_router.py  test_control.py  test_coordinator.py  test_coordinator_vpn.py  test_git_remote.py  test_jenkins_client.py
apps/config-hub/: Dockerfile  README.md  pyproject.toml
apps/config-hub/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/config-hub/frontend/src/: App.tsx  api.ts  main.tsx  types.ts  utils.ts
apps/config-hub/frontend/src/__tests__/: setup.ts  utils.test.ts
apps/config-hub/frontend/src/components/: ConfigScreen.tsx  ConfigTransfer.tsx  Dashboard.tsx  DriveCard.tsx  EphemeralBanner.tsx  ErrorBoundary.tsx  HomeScreen.tsx  JenkinsfilePanel.tsx  LogViewer.tsx  SchemaForm.tsx  ServiceCard.tsx  ServicesPanel.tsx  Sidebar.tsx  StorageBanner.tsx  ToolScreen.tsx  VpnWidget.tsx
apps/config-hub/frontend/src/context/: ConfirmDialog.tsx  TelegramContext.tsx
apps/config-hub/frontend/src/hooks/: useBackButton.ts  useNavigator.ts  useSSE.ts
apps/config-hub/frontend/src/styles/: components.css  editors.css  emulator.css  forms.css  global.css  layout.css  responsive.css  tokens.css  tools.css
apps/config-hub/src/config_hub/: config.py  config_store.py  dependencies.py  env_io.py  jenkins_pipeline.py  main.py  manager.py  services.py  settings.py
apps/config-hub/src/config_hub/routers/: config.py  drive.py  (+5 more)
apps/config-hub/tests/: conftest.py  test_auth.py  test_config_store.py  test_control.py  test_env_io.py  test_jenkins_pipeline.py  test_pages.py  test_service_client.py
apps/config-ui/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/config-ui/src/config_ui/: __init__.py  app.py  config_store.py  drive.py  main.py  schema.py  services.py  settings.py
apps/file-manager/: Dockerfile  README.md  pyproject.toml
apps/file-manager/src/file_manager/: __init__.py  build_log.py  config.py  control.py  dependencies.py  main.py  manager.py  schema.py  storage.py
apps/file-manager/tests/: conftest.py  test_build_log.py  test_control.py  test_ephemeral.py  test_google_drive.py  test_log_only.py  test_storage_manager.py
apps/mock-jenkins/: Dockerfile  README.md  pyproject.toml
apps/mock-jenkins/src/mock_jenkins/: __init__.py  agent.py  config.py  dependencies.py  main.py  manager.py
apps/mock-jenkins/tests/: conftest.py  test_control.py
apps/service-hub/: Dockerfile  README.md  pyproject.toml
apps/service-hub/src/service_hub/: __init__.py  config.py  config_store.py  dependencies.py  env_io.py  jenkins_pipeline.py  main.py  manager.py  services.py
apps/service-hub/tests/: conftest.py  test_config_store.py  test_control.py  test_env_io.py  test_jenkins_pipeline.py  test_service_client.py
apps/stack-manager/: Dockerfile  README.md  pyproject.toml
apps/stack-manager/src/stack_manager/: __init__.py  drive.py  jenkins_pipeline.py  main.py  manager.py  schema.py  services.py  settings.py
apps/tg-admin-bot/: Dockerfile  README.md  pyproject.toml
apps/tg-admin-bot/src/tg_admin_bot/: __init__.py  client.py  config.py  dependencies.py  handlers.py  main.py  manager.py  settings.py
apps/tg-admin-bot/tests/: conftest.py  test_control.py  test_hub_client.py
apps/tg-bot/: .gitignore  Dockerfile  pyproject.toml
apps/tg-bot/frontend/: index.html
apps/tg-bot/frontend-admin/: package.json  vite.config.ts
apps/tg-bot/frontend-admin/src/: api.ts  telegram.d.ts
apps/tg-bot/src/tg_bot/: build_client.py  config.py  dependencies.py  main.py  manager.py  telegram.py
apps/tg-bot/tests/: conftest.py  test_bot_context.py  test_build_callback_route.py  test_build_client.py  test_config_normalization.py  test_handlers.py  test_telegram.py  test_webapp.py
apps/tg-bot/webapp/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/tg-bot/webapp-admin/: index.html  package.json
apps/tg-bot/webapp-admin/src/: App.tsx  api.ts  types.ts  utils.ts
apps/tg-bot/webapp/src/: api.ts
apps/tg-jenkins-bot/: .env.example  Dockerfile  Jenkinsfile  README.md  pyproject.toml
apps/tg-jenkins-bot/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/tg-jenkins-bot/frontend/src/: App.tsx  api.ts  emulator.ts  main.tsx  telegram.d.ts  types.ts
apps/tg-jenkins-bot/src/tg_jenkins_bot/: __init__.py  build_client.py  config.py  control.py  dependencies.py  main.py  manager.py  orch_client.py  project_config.py  schema.py  sm_client.py
apps/tg-jenkins-bot/tests/: conftest.py  test_bot_context.py  test_build_callback_route.py  test_build_client.py  test_callbacks.py  test_config_normalization.py  test_control.py  test_handlers.py  test_interaction_tracker.py  test_store.py  test_webapp.py
libs/config-core/: README.md  pyproject.toml
libs/config-core/src/config_core/: __init__.py  auth.py  logging.py  redact.py  schema.py  telegram.py
libs/config-core/tests/: conftest.py  test_auth.py  test_config_document.py  test_config_path.py  test_redact.py  test_schema_helpers.py  test_telegram.py
libs/stack-manager/: README.md  pyproject.toml
libs/stack-manager/src/stack_manager/: __init__.py  config_store.py  drive.py  env_io.py  jenkins_pipeline.py  project_schema.py
(+300 files in other folders)
