[project]
name = "jenkins-flutter-bot"
version = "0.3.2-dev.1"
description = "CI/CD ecosystem: Telegram bot + Jenkins + Google Drive"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "semver>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = [
    "apps/agent-control/tests",
    "apps/build-manager/tests",
    "apps/config-hub/tests",
    "apps/file-manager/tests",
    "apps/mock-jenkins/tests",
    "apps/tg-jenkins-bot/tests",
    "apps/tg-admin-bot/tests",
    "libs/config-core/tests",
]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.mypy]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["google_auth_oauthlib.*", "googleapiclient.*"]
ignore_missing_imports = true
