[project]
name = "jenkins-flutter-bot"
version = "0.4.2-dev.1"
description = "CI/CD ecosystem: Telegram bot + Jenkins + Google Drive"
requires-python = ">=3.12"
dependencies = [
    "tg-jenkins-bot",
    "config-hub",
    "file-manager",
    "build-manager",
    "agent-control",
    "mock-jenkins",
    "config-core",
]


[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
]

[tool.uv.sources]
tg-jenkins-bot = { workspace = true }
config-hub = { workspace = true }
file-manager = { workspace = true }
build-manager = { workspace = true }
agent-control = { workspace = true }
mock-jenkins = { workspace = true }
config-core = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "semver>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = [
    "apps/agent-control/tests",
    "apps/build-manager/tests",
    "apps/config-hub/tests",
    "apps/file-manager/tests",
    "apps/mock-jenkins/tests",
    "apps/tg-jenkins-bot/tests",
    "libs/config-core/tests",
]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.mypy]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["google_auth_oauthlib.*", "googleapiclient.*", "telegram.*", "tg_jenkins_bot.*"]
ignore_missing_imports = true
