[project]
name = "jenkins-flutter-bot"
version = "0.4.7"
description = "CI/CD ecosystem: Telegram bot + Jenkins + Google Drive"
requires-python = ">=3.12"
dependencies = [
    "tg-bot",
    "service-hub",
    "file-manager",
    "build-manager",
    "agent-control",
    "mock-jenkins",
    "config-core",
]


[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/config-core",
]

[tool.uv.sources]
tg-bot = { workspace = true }
service-hub = { workspace = true }
file-manager = { workspace = true }
build-manager = { workspace = true }
agent-control = { workspace = true }
mock-jenkins = { workspace = true }
config-core = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "semver>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "time-machine>=2.13.0",
    "dirty-equals>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = [
    "apps/agent-control/tests",
    "apps/build-manager/tests",
    "apps/file-manager/tests",
    "apps/mock-jenkins/tests",
    "apps/service-hub/tests",
    "apps/tg-bot/tests",
    "libs/config-core/tests",
]
asyncio_mode = "auto"
addopts = "--import-mode=importlib --cov --cov-report=term-missing"

[tool.mypy]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["google_auth_oauthlib.*", "googleapiclient.*", "telegram.*", "tg_bot.*"]
ignore_missing_imports = true
