[project]
name = "agent-control"
version = "0.1.2-dev.1"
description = "HTTP control wrapper for a Jenkins inbound agent process"
requires-python = ">=3.12"
dependencies = [
    "config-schema",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-schema = { workspace = true }

[project.scripts]
agent-control = "agent_control.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
