[project]
name = "agent-control"
version = "0.5.0-dev.1"
description = "HTTP control wrapper for a Jenkins inbound agent process"
requires-python = ">=3.12"
dependencies = [
    "config-core",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
config-core = { workspace = true }

[project.scripts]
agent-control = "agent_control.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
