[project]
name = "build-manager"
version = "0.2.0-dev.2"
description = "Build lifecycle manager — triggers Jenkins, receives webhooks, uploads artifacts"
requires-python = ">=3.12"
dependencies = [
    "config-schema",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-schema = { workspace = true }

[project.scripts]
build-manager = "build_manager.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
