[project]
name = "config-hub"
version = "0.2.0-dev.2"
description = "Centralized configuration proxy and web dashboard for the Jenkins Flutter Bot stack"
requires-python = ">=3.12"
dependencies = [
    "config-schema",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-schema = { workspace = true }

[project.scripts]
config-hub = "config_hub.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
