[project]
name = "config-ui"
version = "0.1.0"
description = "Web dashboard for Jenkins Flutter Bot stack configuration"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.111.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
config-ui = "config_ui.main:cli"

[dependency-groups]
dev = ["mypy>=1.10.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
