[project]
name = "config-ui"
version = "0.1.2-dev.2"
description = "Web dashboard for Jenkins Flutter Bot stack configuration"
requires-python = ">=3.12"
dependencies = [
    "config-schema",
    "stack-manager",
    "aiofiles>=24.1.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-schema = { workspace = true }
stack-manager = { workspace = true }

[project.scripts]
config-ui = "config_ui.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
