[project]
name = "file-manager"
version = "0.4.3-dev.5"
description = "Backend-agnostic file storage service for the Jenkins Flutter Bot stack"
requires-python = ">=3.12"
dependencies = [
    "config-core",
    "fastapi>=0.111.0",
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-core = { workspace = true }

[project.scripts]
file-manager = "file_manager.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
