[project]
name = "mock-jenkins"
version = "0.2.0-dev.1"
description = "Mock Jenkins server for local development and testing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
]

[project.scripts]
mock-jenkins = "mock_jenkins.main:cli"
mock-agent = "mock_jenkins.agent:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
