[project]
name = "service-hub"
version = "0.4.7"
description = "Centralized configuration proxy and web dashboard for the Jenkins Flutter Bot stack"
requires-python = ">=3.12"
dependencies = [
    "config-core",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-core = { workspace = true }

[project.scripts]
service-hub = "service_hub.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
