[project]
name = "stack-manager"
version = "0.2.0-dev.1"
description = "Central operational backend for the Jenkins Flutter Bot stack"
requires-python = ">=3.12"
dependencies = [
    "config-schema",
    "aiofiles>=24.1.0",
    "fastapi>=0.111.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-schema = { workspace = true }

[project.scripts]
stack-manager = "stack_manager.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
