[project]
name = "tg-admin-bot"
version = "0.3.1-dev.5"
description = "Telegram admin bot for managing the Jenkins Flutter Bot stack"
requires-python = ">=3.12"
dependencies = [
    "config-core",
    "httpx>=0.27.0",
    "python-telegram-bot[ext]>=21.0",
]

[tool.uv.sources]
config-core = { workspace = true }

[project.scripts]
tg-admin-bot = "tg_admin_bot.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
