[project]
name = "tg-bot"
version = "0.5.0-dev.1"
description = "Telegram bot frontend for triggering builds via the build-manager service"
requires-python = ">=3.12"
dependencies = [
    "config-core",
    "python-telegram-bot[ext]>=21.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
config-core = { workspace = true }

[project.scripts]
tg-bot = "tg_bot.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
