[project]
name = "tg-jenkins-bot"
version = "0.2.0-dev.1"
description = "Telegram bot that triggers Jenkins Flutter builds and uploads APKs to Google Drive"
requires-python = ">=3.12"
dependencies = [
    "config-schema",
    "python-telegram-bot[ext]>=21.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "google-api-python-client>=2.130.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-schema = { workspace = true }

[project.scripts]
tg-jenkins-bot = "tg_jenkins_bot.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
