[project]
name = "tg-jenkins-bot"
version = "0.4.1-dev.3"
description = "Telegram bot frontend for triggering builds via the build-manager service"
requires-python = ">=3.12"
dependencies = [
    "config-core",
    "python-telegram-bot[ext]>=21.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]

[tool.uv.sources]
config-core = { workspace = true }

[project.scripts]
tg-jenkins-bot = "tg_jenkins_bot.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
