[project]
name = "config-core"
version = "0.4.2-dev.4"
description = "Configuration core framework for the Jenkins Flutter Bot stack based on Pydantic"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
