[project]
name = "stack-manager"
version = "0.0.2"
description = "Shared operational utilities for stack management (service control, config I/O, Drive OAuth, export/import)"
requires-python = ">=3.12"
dependencies = [
    "config-schema",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
config-schema = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
